# cft-data-util

./: CMakeLists.txt  README.md  main.c  test.c
include/: data_util.h
src/: data_util.c
